--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,14 @@ jupyter_client==8.6.3
 jupyter_core==5.8.1
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
+networkx==3.5
 numpy==2.3.1
+osmnx==2.0.5
 packaging==25.0
 pandas==2.3.1
 parso==0.8.4
 platformdirs==4.3.8
+polyline==2.0.3
 prompt_toolkit==3.0.51
 psutil==7.0.0
 pure_eval==0.2.3
@@ -40,6 +43,7 @@ pywin32==310
 pyzmq==27.0.0
 requests==2.32.4
 s2sphere==0.2.5
+scipy==1.16.1
 shapely==2.1.1
 six==1.17.0
 soupsieve==2.7
